# dingomini-solver

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
src/: main.py
src/core/: card.py  color.py  game.py  solver.py
src/core/patterns/: great_square.py  rectangle.py  small_rectangle.py  square.py
src/core/solvers/: great_square_solver.py  rectangle_solver.py  small_rectangle_solver.py  square_solver.py
src/draw/: drawer.py
tests/: card_test.py  great_square_test.py  rectangle_test.py  small_rectangle_test.py  square_test.py  test_card.py  test_core.py  test_great_square.py  test_rectangle_pattern.py  test_small_rectangle.py  test_square_pattern.py
