[tool.poetry]
name = "dingomini-solver"
version = "0.1.0"
description = ""
authors = ["vlacour <lacour.vincent.app@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
pillow = "~8.3.1"
numpy = "~1.24.2"

[tool.poetry.group.dev.dependencies]
pytest = "~7.1.2"
black = "~23.3.0"
flake8 = "~6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[flake8]
max-line-length = 120